- data/oled/themes/220x176/Default.otheme.in: update

--- a/data/oled/themes/220x176/Default.otheme.in
+++ b/data/oled/themes/220x176/Default.otheme.in
@@ -10,26 +10,27 @@ glcd_background_color_green=0
 glcd_background_color_blue=0
 glcd_background_image=
 glcd_font=@FONTDIR@/neutrino.ttf
-glcd_channel_percent=25
 glcd_channel_align=2
+glcd_channel_percent=20
 glcd_channel_x_position=0
-glcd_channel_y_position=19
+glcd_channel_y_position=30
 glcd_logo=true
-glcd_logo_percent=30
+glcd_logo_percent=25
+glcd_logo_width_percent=100
 glcd_logo_x_position=0
-glcd_logo_y_position=25
-glcd_epg_percent=15
+glcd_logo_y_position=30
 glcd_epg_align=2
+glcd_epg_percent=15
 glcd_epg_x_position=0
 glcd_epg_y_position=80
 glcd_start=false
-glcd_start_percent=0
 glcd_start_align=0
+glcd_start_percent=0
 glcd_start_x_position=0
 glcd_start_y_position=0
 glcd_end=false
-glcd_end_percent=0
 glcd_end_align=0
+glcd_end_percent=0
 glcd_end_x_position=0
 glcd_end_y_position=0
 glcd_duration=false
@@ -38,36 +39,44 @@ glcd_duration_percent=0
 glcd_duration_x_position=0
 glcd_duration_y_position=0
 glcd_progressbar=true
-glcd_progressbar_color_red=62
-glcd_progressbar_color_green=62
 glcd_progressbar_color_blue=62
-glcd_progressbar_percent=15
-glcd_progressbar_width=217
-glcd_progressbar_x_position=3
-glcd_progressbar_y_position=160
+glcd_progressbar_color_green=62
+glcd_progressbar_color_red=62
+glcd_progressbar_percent=10
+glcd_progressbar_width=220
+glcd_progressbar_x_position=0
+glcd_progressbar_y_position=121
 glcd_time=true
-glcd_time_percent=25
 glcd_time_align=2
+glcd_time_percent=25
 glcd_time_x_position=0
-glcd_time_y_position=110
-glcd_icons_percent=0
-glcd_icons_y_position=4
-glcd_icon_ecm_x_position=83
-glcd_icon_cam_x_position=123
-glcd_icon_txt_x_position=161
-glcd_icon_dd_x_position=198
-glcd_icon_mute_x_position=228
-glcd_icon_timer_x_position=278
-glcd_icon_rec_x_position=332
-glcd_icon_ts_x_position=369
+glcd_time_y_position=135
+glcd_icons_percent=6
+glcd_icons_y_position=5
+glcd_icon_cam_x_position=30
+glcd_icon_dd_x_position=60
+glcd_icon_ecm_x_position=1
+glcd_icon_mute_x_position=80
+glcd_icon_rec_x_position=178
+glcd_icon_timer_x_position=140
+glcd_icon_ts_x_position=205
+glcd_icon_txt_x_position=114
 glcd_weather=false
-glcd_weather_curr_x_position=0
-glcd_weather_next_x_position=0
-glcd_weather_y_position=0
+glcd_weather_curr_icon_x_position=1
+glcd_weather_curr_temp_x_position=0
+glcd_weather_next_icon_x_position=180
+glcd_weather_next_temp_x_position=0
+glcd_weather_percent=20
+glcd_weather_y_position=140
+glcd_standby_weather=1
+glcd_standby_weather_curr_icon_x_position=1
+glcd_standby_weather_curr_temp_x_position=50
+glcd_standby_weather_next_icon_x_position=170
+glcd_standby_weather_next_temp_x_position=115
+glcd_standby_weather_percent=25
+glcd_standby_weather_y_position=130
+glcd_standby_clock=1
 glcd_standby_clock_digital_y_position=15
 glcd_standby_clock_simple_size=40
-glcd_standby_clock_simple_y_position=15
-glcd_standby_weather_curr_x_position=20
-glcd_standby_weather_next_x_position=220
-glcd_standby_weather_y_position=100
+glcd_standby_clock_simple_y_position=20
 glcd_position_settings=true
