--- a/configure.ac
+++ b/configure.ac
@@ -343,6 +343,20 @@ AC_ARG_ENABLE(fribidi,
 	AC_DEFINE(ENABLE_FRIBIDI, 1, [enable fribidi support]))
 AM_CONDITIONAL(ENABLE_FRIBIDI, test "$enable_fribidi" = "yes")
 
+# default theme
+AC_ARG_WITH(default-theme,
+	AS_HELP_STRING([--with-default-theme=THEMENAME], [default theme for gui @<:@default is empty@:>@]),
+	[default_theme="$withval"],
+	[default_theme=""])
+AC_DEFINE_UNQUOTED([DEFAULT_THEME], ["$default_theme"], [default theme for gui])
+
+# default oled theme
+AC_ARG_WITH(default-oled-theme,
+	AS_HELP_STRING([--with-default-oled-theme=THEMENAME], [default theme for oled @<:@default is empty@:>@]),
+	[default_oled_theme="$withval"],
+	[default_oled_theme=""])
+AC_DEFINE_UNQUOTED([DEFAULT_OLED_THEME], ["$default_oled_theme"], [default theme for oled])
+
 AC_ARG_WITH(stb-hal-includes,
 	AS_HELP_STRING([--with-stb-hal-includes=PATH], [path to libstb-hal includes [[NONE]]]),
 	[STB_HAL_INC="$withval"],
