- yWeb: update jQuery stuff

--- a/data/y-web/jquery/Makefile.am
+++ b/data/y-web/jquery/Makefile.am
@@ -1,6 +1,10 @@
 installdir = $(PRIVATE_HTTPDDIR)/jquery
 
-# NI-yWeb
-install_DATA = jquery.min.js \
-		jquery.stickytableheaders.min.js \
-		jquery-ui.min.js
+# jQuery library; see https://jquery.com/
+install_DATA = jquery.min.js
+
+# jQuery user interface; see https://jqueryui.com/
+install_DATA += jquery-ui.min.js
+
+# jQuery plugins
+install_DATA += jquery.stickytableheaders.min.js
