- yWeb: move prototype stuff to own subdir

--- a/data/y-web/Makefile.am
+++ b/data/y-web/Makefile.am
@@ -1,4 +1,4 @@
-SUBDIRS = images scripts languages styles
+SUBDIRS = images scripts languages styles prototype
 
 # NI-yWeb
 SUBDIRS += favicon info jquery lcd4linux
@@ -9,7 +9,6 @@ install_DATA =	channels.js \
 		extensions.txt \
 		favicon.ico \
 		index.html \
-		prototype.js \
 		robots.txt \
 		Y_About.yhtm \
 		Y_Baselib.js \
@@ -78,9 +77,7 @@ install_DATA =	channels.js \
 		Y_yweb.js
 
 # file manager
-install_DATA +=	accordion.js \
-		effects.js \
-		Y_Blocks_Filemgr.txt \
+install_DATA +=	Y_Blocks_Filemgr.txt \
 		Y_Filemgr.yhtm \
 		Y_Filemgr_Edit.yhtm
 
