- yWeb: drop obsolete channels.js

--- a/data/y-web/Makefile.am
+++ b/data/y-web/Makefile.am
@@ -5,8 +5,7 @@ SUBDIRS += favicon info jquery lcd4linux
 
 installdir = $(PRIVATE_HTTPDDIR)
 
-install_DATA =	channels.js \
-		extensions.txt \
+install_DATA =	extensions.txt \
 		favicon.ico \
 		index.html \
 		robots.txt \
