- yWeb: rename Y-Web.conf => yWeb.conf

--- a/data/scripts/backup.sh.in
+++ b/data/scripts/backup.sh.in
@@ -16,7 +16,7 @@ TOBACKUP="\
 	@CONFIGDIR@/scan.conf \
 	@CONFIGDIR@/timerd.conf \
 	@CONFIGDIR@/weather-favorites.xml \
-	@CONFIGDIR@/Y-Web.conf \
+	@CONFIGDIR@/yWeb.conf \
 	\
 	@CONFIGDIR@/doscam.* \
 	@CONFIGDIR@/oscam.* \
