- yWeb: addition to 63e90c1a5c514739396350750037013bb440911f

--- a/data/y-web/Makefile.am
+++ b/data/y-web/Makefile.am
@@ -56,7 +56,7 @@ install_DATA =	extensions.txt \
 		Y_Settings_neutrino_forms.yhtm \
 		Y_Settings_nhttpd.yhtm \
 		Y_Settings_personalize.yhtm \
-		Y_Settings_Plugincontrol.yhtm \
+		Y_Settings_Plugins.yhtm \
 		Y_Settings_Plugins_hide.yhtm \
 		Y_Settings_umount_list.yhtm \
 		Y_Settings_video_audio.yhtm \
