--- a/data/y-web/scripts/Makefile.am
+++ b/data/y-web/scripts/Makefile.am
@@ -3,6 +3,7 @@ installdir = $(PRIVATE_HTTPDDIR)/scripts
 install_SCRIPTS = \
 	_Y_Globals.sh \
 	_Y_Library.sh \
+	Y_Camds.sh \
 	Y_Plugincontrol.sh \
 	Y_Tools.sh
 
@@ -12,5 +13,4 @@ install_SCRIPTS += \
 
 # NI-yWeb
 install_SCRIPTS += \
-	Y_NI_Camd-control.sh \
 	Y_NI_Tools.sh
