--- a/data/y-web/styles/Makefile.am
+++ b/data/y-web/styles/Makefile.am
@@ -3,4 +3,4 @@ installdir = $(PRIVATE_HTTPDDIR)/styles
 install_DATA = \
 	Y_Dist-GreyBlue.css \
 	Y_Dist-NI_dark.css \
-	Y_Dist-Tuxbox.css \
+	Y_Dist-Tuxbox.css
