--- a/data/y-web/scripts/Makefile.am
+++ b/data/y-web/scripts/Makefile.am
@@ -4,13 +4,6 @@ install_SCRIPTS = \
 	_Y_Globals.sh \
 	_Y_Library.sh \
 	Y_Camds.sh \
+	Y_NAS.sh \
 	Y_Plugins.sh \
 	Y_Tools.sh
-
-# file manager
-install_SCRIPTS += \
-	Y_NAS.sh
-
-# NI-yWeb
-install_SCRIPTS += \
-	Y_NI_Tools.sh
