- yWeb: fix yinfo.yhtm and ylcd4linux.yhtm

--- a/data/y-web/info/manifest.json
+++ b/data/y-web/info/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "NI - yInfo",
+    "name": "yInfo",
     "icons": [
         {
             "src": "/favicon/android-chrome-192x192.png",
