--- a/data/y-web/lcd4linux/manifest.json
+++ b/data/y-web/lcd4linux/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "NI - yLCD4Linux",
+    "name": "yLCD4Linux",
     "icons": [
         {
             "src": "/favicon/android-chrome-192x192.png",
