--- a/data/config/encoding.conf
+++ b/data/config/encoding.conf
@@ -1,128 +1,82 @@
 #Fallback encoding when in dvb-text no encoding table is given
 #Countycode ISO8859-X
-tur ISO8859-9
-gre ISO8859-7
-pol ISO8859-2
-rus ISO8859-5
-bul ISO8859-5
-cn ISO3166-2
+#
 #Table of transponder using two byte char mappings (VideoTexSuppl)
-#TSID ONID
-0x441 0x1 ISO6937 # RTL
-0x443 0x1 ISO6937 # Eurosport / RTL Austria 
-#
-#0x447 0x1 #ASTRA 19.2° UPC Direct
-#0x427 0x1 #ASTRA 19.2° UPC Direct
-#0x44b 0x1 #ASTRA 19.2° UPC Direct
-#0x4ff 0x1 #ASTRA 19.2° UPC Direct
-#0x407 0x1 #ASTRA 19.2° UPC Direct
-#0x436 0x1 #ASTRA 19.2° MTV Euro - MTV Networks
-#0x42a 0x1 #ASTRA 19.2° VH1 Classic - MTV Networks
-#
-#0xc23 0x3 #ASTRA 23.5° CzechLink 10803H
-#0xbc7 0x3 #ASTRA 23.5° CzechLink 12565H
-#0xc8b 0x3 #ASTRA 23.5° CzechLink 11914H
-#0xc8f 0x3 #ASTRA 23.5° CzechLink 11992H
-0xbc6 0x3 #ASTRA 23.5° 12525V skylink
-0xc85 0x3 #ASTRA 23.5° 11797H skylink
-0xc87 0x3 #ASTRA 23.5° 11836H skylink*
-0xc88 0x3 #ASTRA 23.5° 11856V skylink*
-0xc89 0x3 #ASTRA 23.5° 11876H skylink
-0xc8a 0x3 #ASTRA 23.5° 11895V skylink
-0xc8c 0x3 #ASTRA 23.5° 11934V skylink*
-0xc8e 0x3 #ASTRA 23.5° 11973V skylink*
-0xc93 0x3 #ASTRA 23.5° 12070H skylink
-0xc95 0x3 #ASTRA 23.5° 12109H skylink
-0xc98 0x3 #ASTRA 23.5° 12168V skylink*
-0xc9a 0x3 #ASTRA 23.5° 12207V skylink*
-0xc8b 0x3 ISO6397 # skylink 23.5°E 11914 H 
-#TSID ONID
-0x1 0x601 #UPC Cable Hungary
-0x2 0x601 #UPC Cable Hungary
-0x3 0x601 #UPC Cable Hungary
-0x4 0x601 #UPC Cable Hungary
-0x5 0x601 #UPC Cable Hungary
-0x6 0x601 #UPC Cable Hungary
-0x7 0x601 #UPC Cable Hungary
-0x8 0x601 #UPC Cable Hungary
-0x9 0x601 #UPC Cable Hungary
-0xa 0x601 #UPC Cable Hungary
-0xb 0x601 #UPC Cable Hungary
-0xc 0x601 #UPC Cable Hungary
-0xd 0x601 #UPC Cable Hungary
-0xe 0x601 #UPC Cable Hungary
-0xf 0x601 #UPC Cable Hungary
-# freesat
-0x2bd 0x600 # freesat 0.8°W 11727 V
-0x2be 0x600 # freesat 0.8°W 11766 V
-0x2bf 0x600 # freesat 0.8°W 11804 V
-0x2c0 0x600 # freesat 0.8°W 11996 V
-0x2c1 0x600 # freesat 0.8°W 12034 V
-0x2c2 0x600 # freesat 0.8°W 12073 V
-0x2c3 0x600 # freesat 0.8°W 11938 H
-0x2c4 0x600 # freesat 0.8°W 12188 V
-0x2c5 0x600 # freesat 0.8°W 12265 V
-0x2c6 0x600 # freesat 0.8°W 11843 V
-0x2c8 0x600 # freesat 0.8°W 12111 V
-0x26 0x46 # freesat 0.8°W 11785 H
-0x29 0x46 # freesat 0.8°W 12015 H
-0x1b 0x2c0 # freesat 0.8°W 12226 V
-0x5 0x1111 # freesat 0.8°W 11747 H
-0x7 0x1111 # freesat 0.8°W 11976 H
-0x65 0x1771 # freesat 0.8°W 12380 V
-# DigiTV
-0x1 0x1 ISO8859-2 # DigiTV 0.8°W 12687 H
-0x2 0x1 ISO8859-2 # DigiTV 0.8°W 12723 H
-0x3 0x1 ISO8859-2 # DigiTV 0.8°W 12643 H
-0x4 0x1 ISO8859-2 # DigiTV 0.8°W 12527 H
-0x5 0x1 ISO8859-2 # DigiTV 0.8°W 12563 H
-0x6 0x1 ISO8859-2 # DigiTV 0.8°W 12643 V
-0x7 0x1 ISO8859-2 # DigiTV 0.8°W 12607 H
-0x8 0x1 ISO8859-2 # DigiTV 0.8°W 12687 V
-0x9 0x1 ISO8859-2 # DigiTV 0.8°W 12607 V
-0xa 0x1 ISO8859-2 # DigiTV 0.8°W 12563 V
-0xb 0x1 ISO8859-2 # DigiTV 0.8°W 12718 V
-0xc 0x1 ISO8859-2 # DigiTV 0.8°W 11900 H
-# Cyfra+
-200 318 #Hotbird Eutelsat (Eurosport)
-300 318 #Hotbird Eutelsat (Eurosport, Animal Pl.HD)
-400 318 #Hotbird 13.0 Cyfra+
-1000 318 #Hotbird 13.0 Grupa ITI
-1500 318 #Hotbird 13.0 Cyfra+
-1600 318 #Hotbird 13.0 Cyfra+
-2800 318 #Hotbird 13.0 MTV Networks (Comedy Central)
-7400 113 #Hotbird 13.0 Cyfrowy Polsat
-7800 113 #Hotbird 13.0 Cyfrowy Polsat
-7900 113 #Hotbird 13.0 Cyfrowy Polsat
-8100 113 #Hotbird 13.0 Universal (Cyfra+)
-8100 318 #Hotbird 13.0 Eutelsat (Universal)
-11000 318 #Hotbird 13.0 Cyfra+
-11400 318 #Hotbird 13.0 Cyfra+
-11600 318 #Hotbird 13.0 BBC HD, ITI
-11700 318 #Hotbird 13.0 Eurosport2
-11900 318 #Hotbird 13.0 Cyfra+
-12200 318 #Hotbird 13.0 Disney Channel Polska and other
-12800 318 #Hotbird 13.0 Viacom ... MTV / VH1 Polska
-13000 318 #Hotbird 13.0 BBC Polska and other
-13100 318 #Hotbird 13.0 Crime and Investigation
-13200 113 #Hotbird 13.0 Cyfrowy Polsat
+# plustelka DVB-T/T2
+0x0101 0x22bf #DVBT SK Mux1
+0x0102 0x22bf #DVBT SK Mux2
+0x0103 0x22bf #DVBT SK Mux3
+0x0104 0x22bf #DVBT SK Mux4
+# skylink 23.5Â°E
+0x0c82 0x0003 #ASTRA 11739.00 V Cartoonito
+0x0c89 0x0003 #ASTRA 11875.50 H
+0x0c8c 0x0003 #ASTRA 11934.00 V
+0x0c8d 0x0003 #ASTRA 11953.50 H
+0x0c8e 0x0003 #ASTRA 11973.00 V
+0x0c90 0x0003 #ASTRA 12012.00 V
+0x0c91 0x0003 #ASTRA 12031.50 H
+0x0c93 0x0003 #ASTRA 12070.50 H
+0x0c94 0x0003 #ASTRA 12090.00 V
+0x0c95 0x0003 #ASTRA 12109.50 H
+0x0ca1 0x0003 #ASTRA 12343.50 H
+0x0ca2 0x0003 #ASTRA 12363.00 V
+# DirectOne 0.8Â°W
+0x0003 0x0001 #freesat 12130.00 H Dikh TV,Film 4,Galaxy 4,Match 4
+0x0004 0x0001 #freesat 12187.00 V OzoneNetwork
+0x0005 0x0001 #freesat 11785.00 H Spektrum Home
+0x0005 0x1111 #freesat 11747.00 H Filmbox Basic
+0x000b 0x1111 #freesat 12092.00 H AXN Black,AXN CE,AXN CZ,AXN White,Nat Geo HD,Viasat 2,Viasat 3.,Viasat 6.,Viasat Film
+0x000c 0x0001 #freesat 11900.00 H HBO 3 HU,M4 Sport
+0x000d 0x0001 #freesat 11823.00 H M1 HD,MATCH4 HD
+0x001b 0x02c0 #freesat 12226.00 V Comedy Central Family Hungary,Comedy Central Hungary,MTV Europe,Nickelodeon,Paramount Network
+0x0029 0x0046 #freesat 12015.00 H BBC Earth HD
+0x004c 0x0046 #freesat 12149.00 V History
+0x02bd 0x0600 #freesat 11727.48 V
+0x02be 0x0600 #freesat 11765.84 V
+0x02bf 0x0600 #freesat 11803.90 V
+0x02c0 0x0600 #freesat 11996.00 V
+0x02c1 0x0600 #freesat 12034.36 V
+0x02c2 0x0600 #freesat 12073.72 V
+0x02c3 0x0600 #freesat 11938.46 H
+0x02c5 0x0600 #freesat 12264.52 V
+0x02c6 0x0600 #freesat 11842.56 V
+0x02c7 0x0600 #freesat 11919.28 V
+0x02c8 0x0600 #freesat 11958.00 V
+0x02c9 0x0600 #freesat 12207.00 H
+0x02ca 0x0600 #freesat 12284.00 H
+0x0af7 0x00bb #freesat 12563.00 H Epic Drama HD,JOJ 24,Nova Cinema HD
+0x0af8 0x00bb #freesat 12527.00 H Film+ SK,Spektrum SK HD,Minimax SK
+0x0afa 0x00bb #freesat 12563.00 V RTVS Sport HD,TV Barrandov
 #Fallback encoding table for following transponders
 #TSID ONID ISO8859-X
-0x4fb0 0x7e ISO8859-9 # Digiturk 7°E 10762 V
-0x5014 0x7e ISO8859-9 # Digiturk 7°E 10803 H
-0x5078 0x7e ISO8859-9 # Digiturk 7°E 10804 V
-0x5140 0x7e ISO8859-9 # Digiturk 7°E 10845 V
-0x51a4 0x7e ISO8859-9 # Digiturk 7°E 10886 H
-0x5208 0x7e ISO8859-9 # Digiturk 7°E 10928 H
-0x526c 0x7e ISO8859-9 # Digiturk 7°E 10887 V
-0x52d0 0x7e ISO8859-9 # Digiturk 7°E 10928 V
-0xa0f0 0x7e ISO8859-9 # Digiturk 7°E 11455 V
-0xc3b4 0x7e ISO8859-9 # Digiturk 7°E 11471 H
-0xc418 0x7e ISO8859-9 # Digiturk 7°E 11492 V
-0xc47c 0x7e ISO8859-9 # Digiturk 7°E 11637 H
-0xc4e0 0x7e ISO8859-9 # Digiturk 7°E 11534 V
-0xc5a8 0x7e ISO8859-9 # Digiturk 7°E 11575 V and 42°E 11729 V
-0xc60c 0x7e ISO8859-9 # Digiturk 7°E 11595 H
-0xc670 0x7e ISO8859-9 # Digiturk 7°E 11679 H
-0xc6d4 0x7e ISO8859-9 # Digiturk 7°E 11513 H
-0xc738 0x7e ISO8859-9 # Digiturk 7°E 11617 V
+# Digiturk 42Â°E
+0x0001 0x002a ISO8859-9 #Digiturk 11977 H CARTOON NETWORK,SHOW RADYO,RADYO VIVA
+0x0003 0x002a ISO8859-9 #Digiturk 12034 V SUPER FM,JOY TURK FM,JOY FM RADYO,TELE 1 HD
+0x0007 0x002a ISO8859-9 #Digiturk 12245 H KANAL D HD,CNN TURK HD,LIDER HABER HD,TEVE 2 HD
+0x003d 0x002a ISO8859-9 #Digiturk 11096 H TRT AVAZ HD,TRT AL ARABIA HD
+0x4e85 0x002a ISO8859-9 #Digiturk 11675 V
+0x76c1 0x002a ISO8859-9 #Digiturk 12729 V TV100 HD
+0x78b5 0x002a ISO8859-9 #Digiturk 11265 V
+0x7919 0x002a ISO8859-9 #Digiturk 11054 V TRT HABER HD,TRT KURDI HD,TRT TUTK HD,TRT WORLD
+0x7b0e 0x002a ISO8859-9 #Digiturk 12685 H HABER GLOBAL HD,TGRT HABER HD
+0x7bd6 0x002a ISO8859-9 #Digiturk 12685 V HALK TV HD,
+0x7d6b 0x002a ISO8859-9 #Digiturk 11012 H AL QUARAN HD,AL SUNNAH HD
+0x9c40 0x002a ISO8859-9 #Digiturk 11676 _ 0x042f,0x13cf
+0x9ca5 0x002a ISO8859-9 #Digiturk 11916 V KAFA RADYO
+0x9d6d 0x002a ISO8859-9 #Digiturk 11958 V TRT 3 SPOR HD,TRT 2 HD,TRT SPOR YILDIZ HD
+0x9e38 0x002a ISO8859-9 #Digiturk 11999 V A PARA HD,A2 HD,VAV TV HD
+0x9e99 0x002a ISO8859-9 #Digiturk 12015 H STAR TV HD,NTV HD,KRAL POP,DMAX HD,TLC HD,KRAL FM
+0x9f61 0x002a ISO8859-9 #Digiturk 12054 H MINIKA GO,ATV HD,A HABER HD,A SPORT HD
+0x9fc5 0x002a ISO8859-9 #Digiturk 12073 V
+0xa02b 0x002a ISO8859-9 #Digiturk 12103 H KANAL 7 HD,ULKE TV HD
+0xa02d 0x002a ISO8859-9 #Digiturk 12084 H TRT EBA
+0xa1b9 0x002a ISO8859-9 #Digiturk 12209 H BLOOMBERH HT HD,SHOW TV HD,HABERTURK HD
+0xa2e6 0x002a ISO8859-9 #Digiturk 12298 V ALEM FM
+0xa2e7 0x002a ISO8859-9 #Digiturk 12310 V 24 HD,360 TV HD
+0xa3ae 0x002a ISO8859-9 #Digiturk 12380 V DIYANET TV HD,BEYAZ TV HD
+0xa411 0x002a ISO8859-9 #Digiturk 12379 H DISCOVERY CHANNEL HD,beIN SPORTS HABER,BABY TV
+0xa415 0x002a ISO8859-9 #Digiturk 12356 H TV8 HD
+0xa861 0x002a ISO8859-9 #Digiturk 11794 V TRT COCUK HD,TRT SPOR HD,TRT BELGESEL HD,TRT MUZIK HD,TRT1 HD
+0xa925 0x002a ISO8859-9 #Digiturk 11837 V EKOTURK HD,SOZCU TV
+0xa929 0x002a ISO8859-9 #Digiturk 11305 V
+0xc5a8 0x002a ISO8859-9 #Digiturk 11180 H
