- encoding.conf: use UTF-8 encoding; add some comments to explain this file

--- a/data/config/encoding.conf
+++ b/data/config/encoding.conf
@@ -1,7 +1,20 @@
-#Fallback encoding when in dvb-text no encoding table is given
-#Countycode ISO8859-X
 #
-#Table of transponder using two byte char mappings (VideoTexSuppl)
+# Fallback encoding when dvb-text doesn't provide an encoding table.
+# See CountryCodeDefaultMapping in edvbstring code.
+#
+# Format:
+#Countrycode ISO8859-X
+#
+#chn ISO3166-2
+#
+# -----------------------------------------------------------------------------
+#
+# Table of transponder using two byte char mappings.
+# See TransponderUseTwoCharMapping in edvbstring code.
+#
+# Format:
+#TSID ONID
+#
 # plustelka DVB-T/T2
 0x0101 0x22bf #DVBT SK Mux1
 0x0102 0x22bf #DVBT SK Mux2
@@ -47,8 +60,15 @@
 0x0af7 0x00bb #freesat 12563.00 H Epic Drama HD,JOJ 24,Nova Cinema HD
 0x0af8 0x00bb #freesat 12527.00 H Film+ SK,Spektrum SK HD,Minimax SK
 0x0afa 0x00bb #freesat 12563.00 V RTVS Sport HD,TV Barrandov
-#Fallback encoding table for following transponders
+#
+# -----------------------------------------------------------------------------
+#
+# Fallback encoding table for following transponders.
+# See TransponderDefaultMapping in edvbstring code.
+#
+# Format:
 #TSID ONID ISO8859-X
+#
 # Digiturk 42°E
 0x0001 0x002a ISO8859-9 #Digiturk 11977 H CARTOON NETWORK,SHOW RADYO,RADYO VIVA
 0x0003 0x002a ISO8859-9 #Digiturk 12034 V SUPER FM,JOY TURK FM,JOY FM RADYO,TELE 1 HD
