moviedb: outsource moviedb sources into own subdir

--- a/configure.ac
+++ b/configure.ac
@@ -650,6 +650,7 @@ src/gui/Makefile
 src/gui/bedit/Makefile
 src/gui/components/Makefile
 src/gui/lua/Makefile
+src/gui/moviedb/Makefile
 src/gui/moviebrowser/Makefile
 src/gui/widget/Makefile
 src/gui/widget/yaft/Makefile
