--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -16,7 +16,7 @@ BUILT_SOURCES = $(VERSION_H)
 noinst_HEADERS = $(VERSION_H)
 .PHONY: $(VERSION_H)
 
-SUBDIRS = bedit components moviebrowser widget
+SUBDIRS = bedit components moviebrowser moviedb widget
 
 if ENABLE_LUA
 SUBDIRS += lua
@@ -69,8 +69,6 @@ libneutrino_gui_a_SOURCES = \
 	infoviewer.cpp \
 	infoviewer_bb.cpp \
 	keybind_setup.cpp \
-	mdb-imdb.cpp \
-	mdb-tmdb.cpp \
 	mediaplayer.cpp \
 	mediaplayer_setup.cpp \
 	miscsettings_menu.cpp \
