Fix: fix warning: type struct CFile violates the C++ one definition rule
Set _FILE_OFFSET_BITS=64 in Makefiles for consistent 64-bit off_t definition

This removes -Wodr warnings when compiling CFile and several other classes,
ensuring off_t is consistently defined as a 64-bit type across all
translation units.

Observed while compiling with GCC 13.

Signed-off-by: Thilo Graf <dbt@novatux.de>

--- a/src/driver/Makefile.am
+++ b/src/driver/Makefile.am
@@ -1,4 +1,5 @@
 AM_CXXFLAGS = -fno-rtti -fno-exceptions -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS
+AM_CPPFLAGS = -D_FILE_OFFSET_BITS=64
 
 SUBDIRS = pictureviewer audiodec
 
@@ -6,7 +7,7 @@ if ENABLE_GRAPHLCD
 SUBDIRS += glcd
 endif
 
-AM_CPPFLAGS = \
+AM_CPPFLAGS += \
 	-I$(top_builddir) \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/src \
