--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = -fno-rtti -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS
+AM_CPPFLAGS = -fno-rtti -D__STDC_FORMAT_MACROS -D__STDC_LIMIT_MACROS -D_FILE_OFFSET_BITS=64
 
 VERSION_H = version.h
 $(VERSION_H):
