Update encoding.conf with new ASTRA channels
update active skylink transponders

--- a/data/config/encoding.conf
+++ b/data/config/encoding.conf
@@ -21,16 +21,18 @@
 0x0103 0x22bf #DVBT SK Mux3
 0x0104 0x22bf #DVBT SK Mux4
 # skylink 23.5°E
-0x0c82 0x0003 #ASTRA 11739.00 V Cartoonito
-0x0c89 0x0003 #ASTRA 11875.50 H
+0x0c82 0x0003 #ASTRA 11739.00 V
+0x0c88 0x0003 #ASTRA 11856.00 V
 0x0c8c 0x0003 #ASTRA 11934.00 V
-0x0c8d 0x0003 #ASTRA 11953.50 H
 0x0c8e 0x0003 #ASTRA 11973.00 V
 0x0c90 0x0003 #ASTRA 12012.00 V
 0x0c91 0x0003 #ASTRA 12031.50 H
 0x0c93 0x0003 #ASTRA 12070.50 H
 0x0c94 0x0003 #ASTRA 12090.00 V
 0x0c95 0x0003 #ASTRA 12109.50 H
+0x0c96 0x0003 #ASTRA 12129.00 V
+0x0c99 0x0003 #ASTRA 12187.00 V
+0x0c9d 0x0003 #ASTRA 12265.50 H
 0x0ca1 0x0003 #ASTRA 12343.50 H
 0x0ca2 0x0003 #ASTRA 12363.00 V
 # DirectOne 0.8°W
